--- a/main.ipynb
+++ b/main.ipynb
@@ -261,13 +261,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Starting to process documents in directory: Policy Pulse + AVE collab...\n",
       "Found 29 supported documents to process\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d30f110163a40e9a703d0fbba5efe0d",
+       "model_id": "4294180d640f4fa69e0a46c06cd9f7a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1470feaf9a74f66853bc141ed6c14fd",
+       "model_id": "6f7d0de9eea54fb9b08981520e671ebb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +365,7 @@
      "text": [
       "Sample record format: {'id': 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0', 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}'}\n",
       "Successfully uploaded 107 document chunks to Pinecone index 'policypulse'\n",
-      "Process completed at 2025-09-25 10:03:46.219835!\n"
+      "Process completed at 2025-09-25 10:14:33.675528!\n"
      ]
     }
    ],
@@ -375,7 +376,7 @@
     "index_name = \"policypulse\"  # Replace with your Pinecone index name\n",
     "\n",
     "# Process all documents\n",
-    "print(f\"Starting to process documents in directory: {directory_path}...\")\n",
+    "print(f\"Starting to process documents in directory: {directory_path} at time {datetime.now()}\")\n",
     "documents = process_directory(directory_path, text_splitter)\n",
     "\n",
     "#  Save documents metadata locally\n",
@@ -526,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "f7c852e8",
    "metadata": {},
    "outputs": [
