updating for langchain script

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "4b072295",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "#import pinecone\n",
-    "#from pinecone import Pinecone\n",
+    "from pinecone import Pinecone\n",
     "from dotenv import load_dotenv\n",
     "from pathlib import Path\n",
     "from collections import Counter\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "6615af24",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "bad779d9",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        " 'Policy Pulse + AVE collab\\\\Module 2\\\\v3 Script Module 2 lesson 3\\\\v3 Script Module 2 lesson 3.docx']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "07efe0a9",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "4c10fa5f",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "0dbf6956",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "70a420f7",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "5f8fa97d",
    "metadata": {},
    "outputs": [
@@ -261,14 +261,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to process documents in directory: Policy Pulse + AVE collab...\n",
+      "Starting to process documents in directory: Policy Pulse + AVE collab at time 2025-09-28 17:09:38.865474\n",
       "Found 29 supported documents to process\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4294180d640f4fa69e0a46c06cd9f7a2",
+       "model_id": "4f7fb603e76e4002a0ff1ef8184aeb3e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f7d0de9eea54fb9b08981520e671ebb",
+       "model_id": "89a414ffc4924115814f5502727586e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,8 +364,8 @@
      "output_type": "stream",
      "text": [
       "Sample record format: {'id': 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0', 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}'}\n",
-      "Successfully uploaded 107 document chunks to Pinecone index 'policypulse'\n",
-      "Process completed at 2025-09-25 10:14:33.675528!\n"
+      "Successfully uploaded 107 document chunks to Pinecone index 'policypulse2'\n",
+      "Process completed at 2025-09-28 17:09:46.091502!\n"
      ]
     }
    ],
@@ -373,7 +373,7 @@
     "# Directory containing your documents\n",
     "from datetime import datetime\n",
     "directory_path = \"Policy Pulse + AVE collab\"\n",
-    "index_name = \"policypulse\"  # Replace with your Pinecone index name\n",
+    "index_name = \"policypulse2\"  # Replace with your Pinecone index name\n",
     "\n",
     "# Process all documents\n",
     "print(f\"Starting to process documents in directory: {directory_path} at time {datetime.now()}\")\n",
@@ -389,7 +389,7 @@
     "\n",
     "# Upload to Pinecone\n",
     "pinecone_api_key = PINECONE_API_KEY  # Replace with your Pinecone API key\n",
-    "index_name = \"policypulse\"  # Your index name\n",
+    "index_name = \"policypulse2\"  # Your index name\n",
     "\n",
     "# Uncomment to upload\n",
     "upload_to_pinecone(documents, index_name, pinecone_api_key)\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "2ef5214e",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "5762813d",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
+   "id": "594cf94f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc = Pinecone(api_key=PINECONE_API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "30fef23d",
    "metadata": {},
    "outputs": [
@@ -459,7 +469,7 @@
     "from pinecone import Pinecone\n",
     "\n",
     "# initialize client\n",
-    "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
+    "#pc = Pinecone(api_key=PINECONE_API_KEY)\n",
     "\n",
     "# delete index\n",
     "index_name = \"policypulse\"\n",
@@ -472,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "aea65dda",
    "metadata": {},
    "outputs": [
@@ -481,6 +491,43 @@
      "output_type": "stream",
      "text": [
       "[{\n",
+      "    \"name\": \"policypulse2\",\n",
+      "    \"metric\": \"cosine\",\n",
+      "    \"host\": \"policypulse2-eujlfnx.svc.aped-4627-b74a.pinecone.io\",\n",
+      "    \"spec\": {\n",
+      "        \"serverless\": {\n",
+      "            \"cloud\": \"aws\",\n",
+      "            \"region\": \"us-east-1\"\n",
+      "        }\n",
+      "    },\n",
+      "    \"status\": {\n",
+      "        \"ready\": true,\n",
+      "        \"state\": \"Ready\"\n",
+      "    },\n",
+      "    \"vector_type\": \"dense\",\n",
+      "    \"dimension\": 1024,\n",
+      "    \"deletion_protection\": \"disabled\",\n",
+      "    \"tags\": null,\n",
+      "    \"embed\": {\n",
+      "        \"model\": \"llama-text-embed-v2\",\n",
+      "        \"field_map\": {\n",
+      "            \"text\": \"text\"\n",
+      "        },\n",
+      "        \"dimension\": 1024,\n",
+      "        \"metric\": \"cosine\",\n",
+      "        \"write_parameters\": {\n",
+      "            \"dimension\": 1024.0,\n",
+      "            \"input_type\": \"passage\",\n",
+      "            \"truncate\": \"END\"\n",
+      "        },\n",
+      "        \"read_parameters\": {\n",
+      "            \"dimension\": 1024.0,\n",
+      "            \"input_type\": \"query\",\n",
+      "            \"truncate\": \"END\"\n",
+      "        },\n",
+      "        \"vector_type\": \"dense\"\n",
+      "    }\n",
+      "}, {\n",
       "    \"name\": \"policypulse\",\n",
       "    \"metric\": \"cosine\",\n",
       "    \"host\": \"policypulse-eujlfnx.svc.aped-4627-b74a.pinecone.io\",\n",
@@ -527,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "f7c852e8",
    "metadata": {},
    "outputs": [
@@ -547,7 +594,7 @@
     "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
     "\n",
     "\n",
-    "index_name = \"policypulse\"\n",
+    "index_name = \"policypulse2\"\n",
     "\n",
     "if not pc.has_index(index_name):\n",
     "    pc.create_index_for_model(\n",
@@ -560,7 +607,7 @@
     "        }\n",
     "    )\n",
     "\n",
-    "print(\"Index 'policypulse' created.\")\n"
+    "print(\"Index 'policypulse2' created.\")\n"
    ]
   },
   {
@@ -574,7 +621,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
