added filetype and timestamp to the upsert. also added a fetch individual chunks from Pinecone given chunk id

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "4b072295",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "6615af24",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "bad779d9",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        " 'Policy Pulse + AVE collab\\\\Module 2\\\\v3 Script Module 2 lesson 3\\\\v3 Script Module 2 lesson 3.docx']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "07efe0a9",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "4c10fa5f",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "0dbf6956",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "70a420f7",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "5f8fa97d",
    "metadata": {},
    "outputs": [
@@ -261,14 +261,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to process documents in directory: Policy Pulse + AVE collab at time 2025-09-28 17:09:38.865474\n",
+      "Starting to process documents in directory: Policy Pulse + AVE collab at time 2025-09-30 21:48:44.842389\n",
       "Found 29 supported documents to process\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f7fb603e76e4002a0ff1ef8184aeb3e",
+       "model_id": "431995f2e28b4c85965a3fd189c10ceb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89a414ffc4924115814f5502727586e6",
+       "model_id": "e62827dee6194631a812aa3bab3e9272",
        "version_major": 2,
        "version_minor": 0
       },
@@ -363,9 +363,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample record format: {'id': 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0', 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}'}\n",
+      "Sample record format: {'id': 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0', 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}', 'file_type': '.docx', 'timestamp': '2025-09-30T21:48:49.615275'}\n",
       "Successfully uploaded 107 document chunks to Pinecone index 'policypulse2'\n",
-      "Process completed at 2025-09-28 17:09:46.091502!\n"
+      "Process completed at 2025-09-30 21:48:51.718168!\n"
      ]
     }
    ],
@@ -441,7 +441,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
+   "id": "d8d5d87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 107 IDs\n",
+      "First 5 IDs: ['Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0', 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_1', 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_2', 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_3', 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_4']\n",
+      "\n",
+      "=== ID: Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0 ===\n",
+      "Metadata: {'file_type': '.docx', 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}', 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'timestamp': '2025-09-30T21:48:49.615275'}\n",
+      "Vector length: 1024\n",
+      "\n",
+      " {'dimension': 1024,\n",
+      " 'index_fullness': 0.0,\n",
+      " 'metric': 'cosine',\n",
+      " 'namespaces': {'': {'vector_count': 104}},\n",
+      " 'total_vector_count': 104,\n",
+      " 'vector_type': 'dense'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is to verify the upload by fetching some vectors and printing their metadata\n",
+    "import json\n",
+    "\n",
+    "# Path to your JSON file\n",
+    "file_path = \"documents_metadata_and_chunks.json\" # need to get chunk ids from here first in local repo\n",
+    "\n",
+    "# Load JSON into Python\n",
+    "with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)   # data is now a list of dicts\n",
+    "\n",
+    "# Extract all IDs into a list\n",
+    "ids = [record[\"id\"] for record in data]\n",
+    "\n",
+    "print(f\"Found {len(ids)} IDs\")\n",
+    "print(\"First 5 IDs:\", ids[:5])  # peek at first few\n",
+    "\n",
+    "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
+    "index = pc.Index(\"policypulse2\")\n",
+    "\n",
+    "resp = index.fetch(ids=ids[0:1])\n",
+    "\n",
+    "# resp is a FetchResponse; access its vectors\n",
+    "for vid, record in resp.vectors.items():\n",
+    "    print(f\"\\n=== ID: {vid} ===\")\n",
+    "    print(\"Metadata:\", record.metadata)\n",
+    "    print(\"Vector length:\", len(record.values))\n",
+    "\n",
+    "stats = index.describe_index_stats()\n",
+    "print(\"\\n\",stats)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "594cf94f",
    "metadata": {},
    "outputs": [],
@@ -452,17 +510,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6687e740",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "30fef23d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index 'policypulse' deleted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use this to delete the index if needed - THINK CAREFULLY BEFORE RUNNING\n",
     "\n",
@@ -472,7 +530,7 @@
     "#pc = Pinecone(api_key=PINECONE_API_KEY)\n",
     "\n",
     "# delete index\n",
-    "index_name = \"policypulse\"\n",
+    "index_name = \"policypulse2\"\n",
     "if index_name in [i[\"name\"] for i in pc.list_indexes()]:\n",
     "    pc.delete_index(index_name)\n",
     "    print(f\"Index '{index_name}' deleted.\")\n",
@@ -482,92 +540,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "aea65dda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{\n",
-      "    \"name\": \"policypulse2\",\n",
-      "    \"metric\": \"cosine\",\n",
-      "    \"host\": \"policypulse2-eujlfnx.svc.aped-4627-b74a.pinecone.io\",\n",
-      "    \"spec\": {\n",
-      "        \"serverless\": {\n",
-      "            \"cloud\": \"aws\",\n",
-      "            \"region\": \"us-east-1\"\n",
-      "        }\n",
-      "    },\n",
-      "    \"status\": {\n",
-      "        \"ready\": true,\n",
-      "        \"state\": \"Ready\"\n",
-      "    },\n",
-      "    \"vector_type\": \"dense\",\n",
-      "    \"dimension\": 1024,\n",
-      "    \"deletion_protection\": \"disabled\",\n",
-      "    \"tags\": null,\n",
-      "    \"embed\": {\n",
-      "        \"model\": \"llama-text-embed-v2\",\n",
-      "        \"field_map\": {\n",
-      "            \"text\": \"text\"\n",
-      "        },\n",
-      "        \"dimension\": 1024,\n",
-      "        \"metric\": \"cosine\",\n",
-      "        \"write_parameters\": {\n",
-      "            \"dimension\": 1024.0,\n",
-      "            \"input_type\": \"passage\",\n",
-      "            \"truncate\": \"END\"\n",
-      "        },\n",
-      "        \"read_parameters\": {\n",
-      "            \"dimension\": 1024.0,\n",
-      "            \"input_type\": \"query\",\n",
-      "            \"truncate\": \"END\"\n",
-      "        },\n",
-      "        \"vector_type\": \"dense\"\n",
-      "    }\n",
-      "}, {\n",
-      "    \"name\": \"policypulse\",\n",
-      "    \"metric\": \"cosine\",\n",
-      "    \"host\": \"policypulse-eujlfnx.svc.aped-4627-b74a.pinecone.io\",\n",
-      "    \"spec\": {\n",
-      "        \"serverless\": {\n",
-      "            \"cloud\": \"aws\",\n",
-      "            \"region\": \"us-east-1\"\n",
-      "        }\n",
-      "    },\n",
-      "    \"status\": {\n",
-      "        \"ready\": true,\n",
-      "        \"state\": \"Ready\"\n",
-      "    },\n",
-      "    \"vector_type\": \"dense\",\n",
-      "    \"dimension\": 1024,\n",
-      "    \"deletion_protection\": \"disabled\",\n",
-      "    \"tags\": null,\n",
-      "    \"embed\": {\n",
-      "        \"model\": \"llama-text-embed-v2\",\n",
-      "        \"field_map\": {\n",
-      "            \"text\": \"text\"\n",
-      "        },\n",
-      "        \"dimension\": 1024,\n",
-      "        \"metric\": \"cosine\",\n",
-      "        \"write_parameters\": {\n",
-      "            \"dimension\": 1024.0,\n",
-      "            \"input_type\": \"passage\",\n",
-      "            \"truncate\": \"END\"\n",
-      "        },\n",
-      "        \"read_parameters\": {\n",
-      "            \"dimension\": 1024.0,\n",
-      "            \"input_type\": \"query\",\n",
-      "            \"truncate\": \"END\"\n",
-      "        },\n",
-      "        \"vector_type\": \"dense\"\n",
-      "    }\n",
-      "}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(pc.list_indexes())"
    ]
@@ -577,15 +553,7 @@
    "execution_count": null,
    "id": "f7c852e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index 'policypulse' created.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is to create an index with a given name if it doesn't exist\n",
     "from pinecone import ServerlessSpec\n",
